--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,8 +10,7 @@ services:
       - ./.env
 
   web:
-    build:
-      context: ../api_yamdb/
+    image: zima2022/api_yamdb:latest
     restart: always
     volumes:
       - static_value:/app/static/
