--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - ./.env
 
   web:
-    image: zima2022/api_yamdb:latest
+    image: zima2022/api_yamdb:v1.1.2
     restart: always
     volumes:
       - static_value:/app/static/
